welcome.lessons.welcome.array.island.Island.scala.error
island:19: error: not found: value k
		i=k}
                  ^